...
                                    <constraint firstAttribute="width" secondItem="DMg-Ov-4VJ" secondAttribute="height" multiplier="9:10" id="IRN-AE-Sq1"/>
                                    <constraint firstAttribute="width" constant="45" id="PvP-4Z-ctA"/>
                                    <constraint firstAttribute="height" constant="50" id="RyG-xK-raR"/>
                                    <constraint firstAttribute="width" constant="45" id="vez-fu-lgK"/>
                                    <constraint firstAttribute="width" secondItem="DMg-Ov-4VJ" secondAttribute="height" multiplier="9:10" id="xtx-7b-s5L"/>
                                </constraints>
                                <state key="normal" image="profileIcon"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="IRN-AE-Sq1"/>
                                        <exclude reference="vez-fu-lgK"/>
                                    </mask>
                                </variation>
...
                                    <constraint firstAttribute="height" constant="92" id="EWS-U4-7pA"/>
                                    <constraint firstAttribute="width" constant="85" id="cjH-Ru-Wy1"/>
                                    <constraint firstAttribute="width" secondItem="iy2-AK-hv6" secondAttribute="height" multiplier="1:1" id="eUd-mm-yAy"/>
                                    <constraint firstAttribute="width" constant="92" id="jgk-tm-tRe"/>
                                    <constraint firstAttribute="width" constant="100" id="zHN-dF-ju6"/>
                                </constraints>
                                <state key="normal" title="Button" image="Group"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="6Ib-nv-YHU"/>
                                        <exclude reference="7Sd-OK-wGi"/>
                                        <exclude reference="EWS-U4-7pA"/>
                                        <exclude reference="eUd-mm-yAy"/>
...
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="retakeAction:" destination="d1b-im-btc" eventType="touchUpInside" id="io4-dd-BYY"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What's going on?" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="bhx-DR-QUb" customClass="UITextFieldLimit">
                                <rect key="frame" x="16" y="36" width="343" height="30"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="OUH-J5-Wwf"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X9n-uW-Cgh" userLabel="Take Photo Button">
                                <rect key="frame" x="137.5" y="537" width="100" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="5fs-Td-V0V"/>
                                    <constraint firstAttribute="width" constant="100" id="Mix-tT-rqU"/>
                                </constraints>
                                <state key="normal" image="whiteCamera"/>
                                <connections>
                                    <action selector="takePhotoAction:" destination="d1b-im-btc" eventType="touchUpInside" id="36A-Ge-FTN"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SzE-sB-ACH">
                                <rect key="frame" x="13" y="602" width="51" height="49"/>
...
                            <mask key="constraints">
                                <exclude reference="qUg-jN-dNi"/>
                            </mask>
                        </variation>
                    </view>
                    <connections>
                        <outlet property="backToMapButton" destination="SzE-sB-ACH" id="mRa-bJ-Vdi"/>
                        <outlet property="cameraSwivelButton" destination="jzU-kD-nqP" id="cjU-Tv-o7D"/>
                        <outlet property="cameraView" destination="Vnx-3Z-MtI" id="lL1-i2-dub"/>
                        <outlet property="flareTitle" destination="bhx-DR-QUb" id="Mvd-9p-Bgq"/>
                        <outlet property="flashBtn" destination="fra-nb-sTF" id="eVX-dN-9nP"/>
                        <outlet property="retakePhotoButton" destination="3bf-he-SZq" id="GlI-TH-MbP"/>
                        <outlet property="sendFlareImageButton" destination="5kc-bo-fR1" id="ggZ-sM-PXk"/>
                        <outlet property="sendToEveryoneButton" destination="DWS-Vn-kDQ" id="Bii-J2-2JC"/>
                        <outlet property="sendToFriendsButton" destination="Qvk-s3-LwG" id="LsY-IR-pe9"/>
                        <outlet property="takePhotoButton" destination="X9n-uW-Cgh" id="UJK-Q9-i8g"/>
                        <outlet property="tempImageView" destination="eMQ-rC-P60" id="L6a-LR-S5N"/>
                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="returnMap" id="fAW-4j-zEK"/>
                        <segue destination="AzX-Gn-k8r" kind="unwind" identifier="cancelToMapView" unwindAction="cancelToMapViewControllerWithSegue:" id="WSV-MC-enc"/>
                        <segue destination="AzX-Gn-k8r" kind="unwind" identifier="cancelToMapView" unwindAction="cancelToMapViewControllerWithSegue:" id="BFu-Ya-0eu"/>
                    </connections>
                </viewController>
...
                        <connections>
                            <outlet property="dataSource" destination="iNJ-rH-lbc" id="IYp-jX-SMx"/>
                            <outlet property="delegate" destination="iNJ-rH-lbc" id="3fW-HX-hQu"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Send to Friends" id="L0B-R9-79g">
                        <barButtonItem key="leftBarButtonItem" title="Done" id="pIM-MI-glP">
                            <connections>
                                <segue destination="Y1p-J3-fUL" kind="unwind" identifier="SaveSelectedFriends" unwindAction="cancelToFlareViewControllerWithSegue:" id="Hcg-0e-1Dy"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Invite" id="ebD-4z-3mH">
                            <connections>
...
