...
import SwiftyJSON

class MapViewController: UIViewController, MKMapViewDelegate, CLLocationManagerDelegate {

    @IBOutlet weak var mapView: MKMapView!
    @IBOutlet weak var profilePic: UIImageView!
    @IBOutlet weak var toggleMapButton: UISwitch!
    @IBOutlet weak var toggleMapLabel: UILabel!
    @IBOutlet weak var centreLocationButton: UIButton!
    
    let locationManager = CLLocationManager()
    
    var flareExport: Flare?
    var activeFlareTime: Double?
...
